src/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>Asset_Install_Date__c</fullName>
        <description>Enter asset install date here to be used while product gets converted into asset.</description>
        <inlineHelpText>Enter asset install date here to be used while product gets converted into asset.</inlineHelpText>
        <label>Asset Install Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Asset_Sr_No__c</fullName>
        <description>Enter asset serial number</description>
        <inlineHelpText>Enter asset serial number</inlineHelpText>
        <label>Asset Sr. No.</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Asset of this line item</description>
        <inlineHelpText>Asset of this line item</inlineHelpText>
        <label>Asset tied to this line item</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Discount_based_on_Sale_Price__c</fullName>
        <formula>IF( PricebookEntry.Product2.ProRate_Price__c = TRUE, (ListPrice -  (UnitPrice/  (Entitlement_Term__c /  PricebookEntry.Product2.Renewal_Term_Months__c )))/ListPrice, (ListPrice - UnitPrice)/ListPrice)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount based on Sale Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Entitlement_End_Date__c</fullName>
        <description>Enter entitlement end date</description>
        <inlineHelpText>Enter entitlement end date</inlineHelpText>
        <label>Entitlement End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Entitlement_Start_Date__c</fullName>
        <description>Enter entitlement start date</description>
        <inlineHelpText>Enter entitlement start date</inlineHelpText>
        <label>Entitlement Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Entitlement_Term__c</fullName>
        <description>Enter entitlement term</description>
        <inlineHelpText>Enter entitlement term</inlineHelpText>
        <label>Entitlement Term (Months)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_asset__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hidden field, should be set to true only when an asset has been created for this Line-Item.</description>
        <inlineHelpText>Hidden field, should be set to true only when an asset has been created for this Line-Item.</inlineHelpText>
        <label>Is Asset Created?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_LineItem_ID__c</fullName>
        <label>Originating Opportunity LineItem ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_LineItem_URL__c</fullName>
        <label>Originating Opportunity LineItem</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Originating_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Originating Source Opportunity ID from where renewal opportunity was created. This is to be used while updating renewal opp when source opp is updated. Example, renewal opp had 50 quantities on certain product from source opp and later on source opp got updated to 55 quantities of same product. This field will allow to update renewal opp easily.</description>
        <label>Originating Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Entitlement_Term_Set_Up__c</fullName>
        <formula>PricebookEntry.Product2.Renewal_Term_Months__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Entitlement Term Set-Up</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Price_Per_Unit_Per_Ent_Term__c</fullName>
        <description>Sales Price Per Unit Per Entitlement Term</description>
        <formula>UnitPrice / (Entitlement_Term__c / PricebookEntry.Product2.Renewal_Term_Months__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Price Per Unit Per Ent Term</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <validationRules>
        <fullName>Entitlement_End_Date_less_than_StartDate</fullName>
        <active>true</active>
        <errorConditionFormula>Entitlement_End_Date__c &lt; Entitlement_Start_Date__c</errorConditionFormula>
        <errorDisplayField>Entitlement_End_Date__c</errorDisplayField>
        <errorMessage>Entitlement End Date cannot be less than Entitlement Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Entitlement_Term_cannot_be_negative</fullName>
        <active>true</active>
        <errorConditionFormula>Entitlement_Term__c &lt; 0</errorConditionFormula>
        <errorDisplayField>Entitlement_Term__c</errorDisplayField>
        <errorMessage>Entitlement Term cannot be negative</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Locking_editing_of_line_items_of_won_opp</fullName>
        <active>true</active>
        <description>Locking editing of Opportunity Line Items of Closed Won opportunities</description>
        <errorConditionFormula>Opportunity.IsWon == TRUE &amp;&amp; Opportunity.Ready_For_Renewal__c == TRUE &amp;&amp; ($Profile.Name &lt;&gt; &apos;System Administrator&apos;)</errorConditionFormula>
        <errorMessage>Opportunity tied to this line item is &apos;Won&apos; and renewal has already been created from it. Hence, this line item can&apos;t be edited further. Please consult system administrator for your org for any desired changes.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sale_Price_cannot_be_greater_than_List_P</fullName>
        <active>true</active>
        <description>Sale Price cannot be greater than List Price</description>
        <errorConditionFormula>(ListPrice * PricebookEntry.Product2.Renewal_Term_Months__c) &lt;  (UnitPrice / (Entitlement_Term__c / PricebookEntry.Product2.Renewal_Term_Months__c))</errorConditionFormula>
        <errorDisplayField>UnitPrice</errorDisplayField>
        <errorMessage>Sales Price cannot be greater than List Price</errorMessage>
    </validationRules>
</CustomObject>